# pth-fausta

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: AI_TEAM.md  APPLICATION_SERVICES.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  COMPOSITION_ROOT.md  CORE_ARCHITECTURE.md  CUSTOMER_MODULE_UI.md  DATABASE.md  DECISIONS.md  DOCUMENT_DOMAIN.md  DOCUMENT_MODULE_UI.md  DocumentationStandard_v2.0.md  PRODUCT_MODULE_UI.md  PRODUCT_SCOPE.md  ROADMAP.md  TODO.md  UI_GUIDELINES.md
docs/adr/: ADR-001-composition-root.md
src/app/: bootstrap.py  main.py
src/app/controllers/: __init__.py  app_controller.py  base_controller.py  company_controller.py  customer_controller.py  product_controller.py
src/app/core/: __init__.py  app.py  app_state.py  config.py  event_bus.py  lifecycle.py  logger.py  paths.py  service_container.py  settings.py  version.py
tests/: test_app.py  test_app_controller.py  test_app_state.py  test_architecture_dependencies.py  test_base_controller.py  test_base_model.py  test_base_repository.py  test_base_service.py  test_base_view.py  test_bootstrap.py  test_company_module.py  test_config.py  test_customer_module.py  test_customer_ui.py  test_database_config.py  test_database_engine.py  test_document_domain.py  test_event_bus.py  test_logger.py  test_main.py  test_main_view.py  test_navigation_service.py  test_paths.py  test_product_module.py  test_product_ui.py  test_qt_event_loop.py  test_service_container.py  test_session_factory.py  test_settings.py  test_shared_ui.py  test_ui_foundation.py  test_version.py
(+45 files in other folders)
