[project]
name = "pth_Fausta"
version = "0.1.0"
description = "PTH Fausta Python project"
requires-python = ">=3.13"
dependencies = ["SQLAlchemy>=2.0,<3.0"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
